tests/spec/fail/select_send_with_as.aja
ch = chan()
select:
    case send(ch, 1) as x:
        print(x)
